--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="boolst">
           <div class="bolt">
             <div class="garip">
-              <img src="./img/sect3/snak.jpg" alt="foto">
+              <img class="foto-bolt" src="./img/sect3/snak.jpg" alt="foto">
               <p class="info-bolt">35 років досвіду</p>
             </div>
             <p class="info-bolt-parg">Ефективна комунікація – запорука успіху будь-якого бізнесу. Від співробітників
@@ -258,7 +258,7 @@
           </div>
           <div class="bolt">
             <div class="garip">
-              <img src="./img/sect3/snak.jpg" alt="foto">
+              <img class="foto-bolt" src="./img/sect3/snak.jpg" alt="foto">
               <p class="info-bolt">Сертифікат відмінності</p>
             </div>
             <p class="info-bolt-parg">Ми повністю розуміємо, що ваш час надзвичайно цінний. Ми прагнемо дотримуватись
@@ -266,7 +266,7 @@
           </div>
           <div class="bolt">
             <div class="garip">
-              <img src="./img/sect3/snak.jpg" alt="foto">
+              <img class="foto-bolt" src="./img/sect3/snak.jpg" alt="foto">
               <p class="info-bolt">Доступна ціна</p>
             </div>
             <p class="info-bolt-parg">Ми суворо дотримуємося чинного національного електротехнічного кодексу та
@@ -280,35 +280,35 @@
 
     <section class="image-grid-section container">
       <div id="proekt" class="drap">
-        <img src="./img/sect3/foto1.png" width="22" height="25" alt="Маленькое изображение">
+        <img class="foto-drap" src="./img/sect3/foto1.png" alt="Маленькое изображение">
         <p class="parg-drap">Галерея</p>
       </div>
       <h2 class="text-drap">Наші останні проекти</h2>
 
       <div class="imageli-drap">
         <div class="imageli">
-          <img src="./img/sect3/foto22.jpg" width="250" height="280" alt="Изображение 1">
+          <img class="foto-imaheli" src="./img/sect3/foto22.jpg" alt="Изображение 1">
           <div class="text">
             <p class="text-pargone">Зміна оптоволоконного кабелю</p>
             <p class="text-pargtho">Комерційний</p>
           </div>
         </div>
         <div class="imageli">
-          <img src="./img/sect3/foto23.png" width="250" height="280" alt="Изображение 2">
+          <img class="foto-imaheli" src="./img/sect3/foto23.png" alt="Изображение 2">
           <div class="text">
             <p class="text-pargone">Проблема промислової машини</p>
             <p class="text-pargtho">Промисловість</p>
           </div>
         </div>
         <div class="imageli">
-          <img src="./img/sect3/foto24.jpg" width="250" height="280" alt="Изображение 3">
+          <img class="foto-imaheli" src="./img/sect3/foto24.jpg" alt="Изображение 3">
           <div class="text">
             <p class="text-pargone">Зміна та ремонт литого диска</p>
             <p class="text-pargtho">Житловий</p>
           </div>
         </div>
         <div class="imageli">
-          <img src="./img/sect3/foto25.png" width="250" height="280" alt="Изображение 4">
+          <img class="foto-imaheli" src="./img/sect3/foto25.png" alt="Изображение 4">
           <div class="text">
             <p class="text-pargone">Очищення та установа даху</p>
             <p class="text-pargtho">Комерційний</p>
@@ -323,7 +323,7 @@
         <div class="price-plan">
           <div class="text-price">
             <div class="paragraf-price-ac">
-              <img src="./img/sect3/foto1.png" width="22" height="25" alt="foto">
+              <img class="foto-price" src="./img/sect3/foto1.png" alt="foto">
               <p class="smool-text">Ціновий план</p>
             </div>
             <h2 class="text-big-price">Налаштуємо роботу за доступною ціною</h2>
@@ -346,43 +346,43 @@
             <div class="text-price-vip">
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Електрообслуговування</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Системи розподілу електроенергії</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Висока та середня напруга</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Промислові системи управління</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Встановлення перемикача</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Генераторні установки</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Інноваційне будівництво</p>
               </div>
@@ -405,43 +405,43 @@
             <div class="text-price-vip">
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Елементи управління ПЛК</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Конвеєрні системи</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Ремонт електропроводки</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Ремонт електричних водонагрівачів</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Оновлення панелей</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Ефективні освітлювальні рішення</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Освітлення майданчика</p>
               </div>
@@ -463,43 +463,43 @@
             <div class="text-price-vip">
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Монтаж кабельних лотків</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Оновлення електропроводки</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Енергоефективне освітлення</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Аварійна генерація</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Басейни та гідромасажні ванни</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Блоки кондиціонування повітря</p>
               </div>
               <div class="block-vip">
                 <div class="foto-vip">
-                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                  <img class="foto-block" src="./img/sect4/iconka.png" alt="fotosdf">
                 </div>
                 <p class="parg-vip">Генеруючі системи</p>
               </div>
@@ -513,7 +513,7 @@
         <div class="text-new-vip">
           <div class="vip-pargar">
             <div class="iconka-vip">
-              <img src="./img/sect3/snak.jpg" width="32" height="32" alt="foto">
+              <img class="foto-iconka" src="./img/sect3/snak.jpg" alt="foto">
             </div>
             <div class="text-vipar">
               <p class="many-vip">Доступна ціна</p>
@@ -526,7 +526,7 @@
 
           <div class="vip-pargar">
             <div class="iconka-vip">
-              <img src="./img/sect3/snak.jpg" width="32" height="32" alt="foto">
+              <img class="foto-iconka" src="./img/sect3/snak.jpg" alt="foto">
             </div>
             <div class="text-vipar">
               <p class="many-vip">Фіксований план</p>
