--- a/index.html
+++ b/index.html
@@ -563,12 +563,12 @@
     <div class="footer-pidval">
       <div class="footer-logo">
         <div class="logo-box">
-          <img src="./img/footer-logo/footer-logo.png" alt="Логотип">
+          <img class="logo-foto-box" src="./img/footer-logo/footer-logo.png" alt="Логотип">
         </div>
         <div class="logo-adress-footer">
 
           <div class="address-footer">
-            <img class="logo-email-footer" src="./img/logo/email.png" width="68" height="68" alt="Адрес 1">
+            <img class="logo-email-footer" src="./img/logo/email.png" alt="Адрес 1">
             <div class="emaill-footer">
               <p class="parg-adres-footer">Напишіть нам
                 <a class="email-cont-footer" href="mailto:info@example.com">blueCollar@gmail.com</a>
@@ -576,7 +576,7 @@
             </div>
           </div>
           <div class="address-footer">
-            <img class="logo-tell-footer" src="./img/logo/call.png" width="68" height="68" alt="Адрес 2">
+            <img class="logo-tell-footer" src="./img/logo/call.png" alt="Адрес 2">
             <div class="teell-footer">
               <p class="parg-adres-footer">Зателефонуйте
                 <a class="tell-cont-footer" href="tel:+1234567890">+38(099)9999999</a>
@@ -584,7 +584,7 @@
             </div>
           </div>
           <div class="address-footer">
-            <img class="logo-lokation-footer" src="./img/footer-logo/Frame.png" width="68" height="68" alt="Адрес 2">
+            <img class="logo-lokation-footer" src="./img/footer-logo/Frame.png" alt="Адрес 2">
             <div class="location-marker" id="map" onclick="showLocation()">
               <p class="location-info">Локація
                 <a class="location-cont-footer">Полтава, 3600</a>
@@ -605,16 +605,16 @@
           </div>
           <div class="icons-iconka">
             <div class="icon-ftr">
-              <img src="./img/footer-logo/iconka1.png" alt="iconka">
+              <img class="iconka-iconka" src="./img/footer-logo/iconka1.png" alt="iconka">
             </div>
             <div class="icon-ftr">
-              <img src="./img/footer-logo/iconka2.png" alt="iconka">
+              <img class="iconka-iconka" src="./img/footer-logo/iconka2.png" alt="iconka">
             </div>
             <div class="icon-ftr">
-              <img src="./img/footer-logo/iconka3.png" alt="iconka">
+              <img class="iconka-iconka" src="./img/footer-logo/iconka3.png" alt="iconka">
             </div>
             <div class="icon-ftr">
-              <img src="./img/footer-logo/iconka4.png" alt="iconka">
+              <img class="iconka-iconka" src="./img/footer-logo/iconka4.png" alt="iconka">
             </div>
           </div>
         </div>
