--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="hero-content">
         <div class="content-container">
           <img src="./img/hero/detal.png" alt="Маленькое изображение">
-          <p class="parg-hero">Покращуйте життя наших клієнтів, надаючи ефективні рішення.</p>
+          <p class="parg-hero">Покращуєм життя наших клієнтів, надаючи ефективні рішення.</p>
         </div>
         <h1 class="text-hero">Визнаний лідер сфери послуг</h1>
         <button class="button-hero"><a class="button-her" href="tel:+1234567890">Замовити</a></button>
@@ -387,7 +387,7 @@
                 <p class="parg-vip">Інноваційне будівництво</p>
               </div>
               <div class="button-vip-btn">
-                <button class="btn-vip">Купити зараз</button>
+                <button id="buyButton1" class="btn-vip">Купити зараз</button>
               </div>
             </div>
           </div>
@@ -446,7 +446,7 @@
                 <p class="parg-vip">Освітлення майданчика</p>
               </div>
               <div class="button-vip-btn">
-                <button class="btn-vip">Купити зараз</button>
+                <button id="buyButton2" class="btn-vip">Купити зараз</button>
               </div>
             </div>
           </div>
@@ -504,7 +504,7 @@
                 <p class="parg-vip">Генеруючі системи</p>
               </div>
               <div class="button-vip-btn">
-                <button class="btn-vip">Купити зараз</button>
+                <button id="buyButton3" class="btn-vip">Купити зараз</button>
               </div>
             </div>
           </div>
@@ -548,9 +548,9 @@
           для будівлі вашої мрії.</p>
       </div>
       <div class="email-block">
-        <form class="form-labil" action="subscribe.php" method="post">
+        <form class="form-labil" action="sendmail.php" method="post">
           <div class=" input-container">
-            <input class="text-form" type="email" id="emailInput" name="email" required>
+            <input class="text-form" type="email" id="email" name="email" required>
             <label class="labelli" for="email">Ваш Email</label>
           </div>
           <button class="subsraib" type="submit">Подписаться</button>
@@ -667,8 +667,40 @@
       <div class="liniar-footer"></div>
     </div>
   </footer>
+
+  <div id="paymentModal" class="modal">
+
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2>Оплата заказа</h2>
+      <!-- Форма для банковской оплаты -->
+      <form action="process_payment.php" method="post">
+        <label for="cardNumber">Номер карты:</label>
+        <input type="text" id="cardNumber" name="cardNumber" required>
+        <br>
+
+        <label for="expiryDate">Срок действия:</label>
+        <input type="text" id="expiryDate" name="expiryDate" placeholder="MM/YY" required>
+        <br>
+
+        <label for="cvv">CVV:</label>
+        <input type="text" id="cvv" name="cvv" required>
+        <br>
+
+        <label for="amount">Сумма оплаты:</label>
+        <input type="text" id="amount" name="amount" required>
+        <br>
+
+        <button type="submit">Оплатить</button>
+      </form>
+    </div>
+  </div>
+
+
   <script src="./js/script.js"></script>
   <script src="./js/scroll.js"></script>
+  <script src="./js/lokation.js"></script>
+
 
 </body>
 
