--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
         </div>
 
       </div>
-      <div class="oplata-za">
+      <div class="button-container">
         <button class="btn-oplata">Оплатити</button>
       </div>
     </div>
